# DZO

./: .gitignore  .gitmodules  CMakeLists.txt  Project.xml  README.md  requirements.txt
forms/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sidebar.cpp  sidebar.h  sidebar.ui
include/: amgcl_solver.h  cuda_gauss_seidel_solver.h  gauss_seidel_solver.h  utility.h
include/simple_poisson_solver/: amgcl_solver.h  gauss_seidel_solver.h  gauss_seidel_solver_better.h  gaussian_blur.h  matrix.h  matrix_better.h  poisson.h  util.h
lib/amgcl_solver/: amgcl_solver.cpp
lib/cuda_gauss_seidel_solver/: clion_cuda_stub.h  cuda.cu  solver.cpp
lib/gauss_seidel_solver/: solver.cpp
lib/simple_poisson_solver/: gaussian_blur.cpp  matrix.cpp  matrix_better.cpp  poisson.cpp
lib/utility/: gaussian_blur.cpp  matrix_crs.cpp  matrix_fixed4.cpp  utility.cpp
qt_examples/: mouse_label.py  pen_drawing.py
report/: compile.sh  reference.bib  report.tex
src/: main.cpp  test_app.cpp  utility.cpp  utility.h
src/canvas/: canvas_model.cpp  canvas_model.h  canvas_view.cpp  canvas_view.h  enums.h  image_type.h  multi_canvas_view.cpp  multi_canvas_view.h
src/gui/: ClickableLabel.cpp  clickable_label.cpp  clickable_label.h
src/shapes/: line.cpp  line.h  rectangle.cpp  rectangle.h  scribble.cpp  scribble.h  shape.cpp  shape.h
